# MPC_Family

./: README.md  data_driven_model.m  data_driven_norm.m
GP_MPC/: CMakeLists.txt  package.xml
GP_MPC/bag/L_01/: metadata.yaml
GP_MPC/bag/L_02/: metadata.yaml
GP_MPC/bag/L_05/: L_05_0.db3  metadata.yaml
GP_MPC/bag/L_10/: L_10_0.db3  metadata.yaml
GP_MPC/include/GP_MPC/: GP_MPC.hpp
GP_MPC/launch/: gazebo.launch.py  node.launch.py
GP_MPC/src/: main.cpp  theta.gp  v.gp  w.gp  x.gp  y.gp  z.gp
GP_MPC/worlds/: barrier.world
MPC_SE/: CMakeLists.txt  CMakeLists.txt.user.e1335d2  CMakeLists_cache.txt  UPDATE.txt  nmpc_solver_setup.cpp  package.xml
MPC_SE/bag/L_01/: L_01_0.db3  metadata.yaml
MPC_SE/bag/MPC/L_01/: L_01_0.db3  metadata.yaml
MPC_SE/bag/MPC/L_02/: metadata.yaml
MPC_SE/bag/MPC/L_05/: L_05_0.db3
MPC_SE/bag/MPC/L_10/: L_10_0.db3
MPC_SE/bag/RMPC/L_01/: L_01_0.db3  metadata.yaml
MPC_SE/bag/RMPC/L_02/: metadata.yaml
MPC_SE/bag/RMPC/L_05/: L_05_0.db3
MPC_SE/bag/RMPC/L_10/: metadata.yaml
MPC_SE/bag/random_noisy/L_01/: L_01_0.db3
MPC_SE/include/MPC_SE/: MPC_SE.hpp  v-t.txt  w-t.txt  x-t.txt  y-t.txt  yaw-t.txt
MPC_SE/include/MPC_SE/OCPexport/: acado_common.h  acado_solver.c
MPC_SE/launch/: gazebo.launch.py  node.launch.py
MPC_SE/solver/OCPexport/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  make_acado_solver_sfunction.m
MPC_SE/src/: main_cache.cpp
MPC_SE/worlds/: barrier.world
Robust_MPC/: CMakeLists.txt  package.xml
Robust_MPC/bag/MPC/L_02/: L_02_0.db3
Robust_MPC/bag/MPC/L_05/: metadata.yaml
Robust_MPC/bag/MPC/L_10/: metadata.yaml
Robust_MPC/bag/RMPC/L_02/: L_02_0.db3
Robust_MPC/bag/RMPC/L_05/: metadata.yaml
Robust_MPC/bag/RMPC/L_10/: L_10_0.db3
Robust_MPC/bag/random_noisy/L_01/: metadata.yaml
Robust_MPC/include/Robust_MPC/: DLQR.cpp  DLQR.hpp  Data_Driven_Model.hpp  Robust_MPC.hpp
Robust_MPC/src/: main.cpp
Robust_MPC/worlds/: empty.world
