<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>MPC_SE</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1009919253@qq.com">wsf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>blasfeo</depend>
  <depend>hpipm</depend>
  <depend>rosidl_default_generators</depend>
  <depend>ct_core</depend>
  <depend>ct_rbd</depend>
  <depend>ct_models</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
